--- a/BilgiYarismasi/BilgiYarismasi.csproj
+++ b/BilgiYarismasi/BilgiYarismasi.csproj
@@ -46,11 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrmGiris.cs">
+    <Compile Include="FrmKategoriEkle.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmGiris.Designer.cs">
-      <DependentUpon>FrmGiris.cs</DependentUpon>
+    <Compile Include="FrmKategoriEkle.Designer.cs">
+      <DependentUpon>FrmKategoriEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmKullaniciGiris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmKullaniciGiris.Designer.cs">
+      <DependentUpon>FrmKullaniciGiris.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmOyun.cs">
       <SubType>Form</SubType>
@@ -76,12 +82,30 @@
     <Compile Include="FrmKayitOl.Designer.cs">
       <DependentUpon>FrmKayitOl.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmYoneticiEkrani.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmYoneticiEkrani.Designer.cs">
+      <DependentUpon>FrmYoneticiEkrani.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmYoneticiGiris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmYoneticiGiris.Designer.cs">
+      <DependentUpon>FrmYoneticiGiris.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kategoriler.cs" />
     <Compile Include="Kullanici.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorular.cs" />
     <Compile Include="sqlbaglantisi.cs" />
-    <EmbeddedResource Include="FrmGiris.resx">
-      <DependentUpon>FrmGiris.cs</DependentUpon>
+    <Compile Include="Yonetici.cs" />
+    <EmbeddedResource Include="FrmKategoriEkle.resx">
+      <DependentUpon>FrmKategoriEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmKullaniciGiris.resx">
+      <DependentUpon>FrmKullaniciGiris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmOyun.resx">
       <DependentUpon>FrmOyun.cs</DependentUpon>
@@ -94,6 +118,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmKayitOl.resx">
       <DependentUpon>FrmKayitOl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmYoneticiEkrani.resx">
+      <DependentUpon>FrmYoneticiEkrani.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmYoneticiGiris.resx">
+      <DependentUpon>FrmYoneticiGiris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
