E şıkkı eklendi Tüm işlemler method haline alındı ve kısaltmalar yapıldı kullanıcı girişi için olusturulan static değeri set edildi kullanıcı adı yerine id bastık tabloda skorlarım bir panel içinde toplandı skorlar adın bir sınıf oluşturuldu ve tüm olusturulan degiskenler bu sınıftan oluşturulan nesnelere aktarıldı

--- a/BilgiYarismasi/BilgiYarismasi.csproj
+++ b/BilgiYarismasi/BilgiYarismasi.csproj
@@ -88,6 +88,7 @@
     <Compile Include="FrmKayitOl.Designer.cs">
       <DependentUpon>FrmKayitOl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Skorlar.cs" />
     <Compile Include="VeriTasima.cs" />
     <Compile Include="FrmYoneticiEkrani.cs">
       <SubType>Form</SubType>
